--- a/style.css
+++ b/style.css
@@ -5,15 +5,17 @@ body {
 .page-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
+    min-height: 100vh;
 }
 
 .header {
     background-color: lightpink;
-    grid-row: 1 / 3;
 }
 
 .sidebar {
     background-color: lightblue;
+    grid-row: 1 / 3;
 
 }
 
