--- a/style.css
+++ b/style.css
@@ -10,15 +10,35 @@ body {
 }
 
 .header {
-    background-color: lightpink;
+    background-color: rgb(255, 198, 151);
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
 }
 
+.search-container {
+    justify-self: stretch;
+    display: flex;
+    align-items: center;
+}
+
+.search-bar {
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(255, 222, 178);
+    flex: 1;
+}
+
+.search-container > img {
+    width: 25px;
+    opacity: 0.7;
+}
+
 .user-info {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .greeting {
@@ -26,7 +46,7 @@ body {
 }
 
 .sidebar {
-    background-color: lightblue;
+    background-color: rgb(228, 174, 58);
     grid-row: 1 / 3;
     display: grid;
     justify-items: center;
@@ -41,7 +61,7 @@ body {
 }
 
 .main-content {
-    background-color: lightgreen;
+    background-color: rgb(228, 89, 58);
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
