Add CSS to user info and update font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Quicksand', sans-serif;
+}
+
 body {
     margin: 0;
 }
@@ -30,15 +34,27 @@ body {
     flex: 1;
 }
 
-.search-container > img {
+.search-container > img{
     width: 25px;
     opacity: 0.7;
 }
 
 .user-info {
+    justify-self: end;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+}
+
+.notif-icon {
+    width: 18px;
+    opacity: 0.7;
+}
+
+.info-user-icon {
+    width: 30px;
+    opacity: 0.9;
 }
 
 .greeting {
