--- a/style.css
+++ b/style.css
@@ -76,6 +76,21 @@ body {
     font-size: 1em;
 }
 
+.head-buttons {
+    justify-self: end;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.head-buttons > button {
+    padding: 7px 12px;
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(248, 145, 19);
+    color: white;
+}
+
 .sidebar {
     background-color: rgb(228, 174, 58);
     grid-row: 1 / 3;
