--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Quicksand', sans-serif;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 body {
@@ -19,7 +20,7 @@ body {
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
-    padding: 0px 40px;
+    padding: 0px 30px;
 }
 
 .search-container {
@@ -103,15 +104,43 @@ body {
     background-color: rgb(228, 174, 58);
     grid-row: 1 / 3;
     display: grid;
-    justify-items: center;
+    grid-template-rows: 1fr 3fr 6fr;
+    justify-items: start;
 }
 
 .sidebar-logo {
+    align-self: start;
     display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 10px 50px 0px 10px;
+}
+
+.sidebar-logo > img {
+    width: 40px;
+    opacity: 0.7;
+}
+
+.sidebar-logo > div {
+    font-size: 1.5em;
+}
+
+.primary-nav, .secondary-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0px 50px 0px 20px;
 }
 
 .nav-item {
     display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.nav-item > img {
+    width: 20px;
+    opacity: 0.7;
 }
 
 .main-content {
