--- a/style.css
+++ b/style.css
@@ -200,6 +200,22 @@ body {
     padding: 10px 0px;
 }
 
-.announce-text {
+.announce-title, .announce-text, .trend-user, .trend-user-bio {
     font-size: 0.8rem;
+}
+
+.trend-main {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.trend-item {
+    display: flex;
+    gap: 10px;
+}
+
+.trend-icon {
+    width: 30px;
+    opacity: 0.7;
 }
