--- a/style.css
+++ b/style.css
@@ -152,13 +152,13 @@ body {
     padding: 20px;
 }
 
+.main-header {
+    padding-bottom: 10px;
+}
+
 .project-container{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-}
-
-.trend-container {
-    grid-column: 2 / 3;
 }
 
 .project-main {
@@ -202,6 +202,11 @@ body {
 
 .announce-title, .announce-text, .trend-user, .trend-user-bio {
     font-size: 0.8rem;
+}
+
+.trend-container {
+    grid-column: 2 / 3;
+    align-self: end;
 }
 
 .trend-main {
