Fix project item grids and headers

--- a/style.css
+++ b/style.css
@@ -173,6 +173,11 @@ body {
     padding: 20px;
 }
 
+.project-item {
+    display: grid;
+    grid-template-rows: 1fr 6fr 1fr;
+}
+
 .project-header, .announce-header, .trend-user {
     font-weight: 600;
 }
