Remove main content column gap

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    gap: 20px;
+    column-gap: 20px;
     padding: 20px;
 }
 
