--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ body {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1 / 3;
     column-gap: 20px;
     padding: 20px;
 }
@@ -197,6 +198,11 @@ body {
     opacity: 0.7;
 }
 
+.announce-container {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
 .announce-main {
     display: flex;
     flex-direction: column;
@@ -215,6 +221,7 @@ body {
 
 .trend-container {
     grid-column: 2 / 3;
+    grid-row: 2 / 3;
     align-self: end;
 }
 
