--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .page-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 166px 5fr;
     min-height: 100vh;
 }
 
@@ -104,7 +104,7 @@ body {
     background-color: rgb(228, 174, 58);
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: 1fr 2fr 6fr;
+    grid-template-rows: 111px 222px 6fr;
     justify-items: start;
 }
 
