--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ body {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1 / 3;
-    column-gap: 20px;
+    grid-template-rows: 1fr 3fr;
+    gap: 20px;
     padding: 20px;
 }
 
@@ -164,7 +164,7 @@ body {
 
 .project-main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 20px;
 }
 
