--- a/style.css
+++ b/style.css
@@ -247,18 +247,41 @@ body {
     font-size: 1rem;
 }
 
-@media only screen and (max-width: 792px) {
-    .sidebar {
-        width: 60px;
-        overflow: hidden;
-        white-space: nowrap;
+@media only screen and (max-width: 790px) {
+    .page-container {
+        grid-template-columns: 60px 5fr;
+        grid-template-rows: 166px 5fr;
+    }
+
+    .sidebar-logo > div, .nav-item > div {
+        display: none;
     }
     
     .sidebar-logo {
-        padding: 0px 0px 0px 10px;
+        padding: 0px 10px 0px 10px;
     }
 
     .primary-nav, .secondary-nav {
-        padding: 0px 0px 0px 20px;
+        padding: 0px 20px 0px 20px;
+    }
+
+    .main-content {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 290px 400px;
+    }
+    
+    .project-container{
+        grid-column: 1 / 1;
+        grid-row: 1 / 2;
+    }
+    
+    .announce-container {
+        grid-column: 1 / 1;
+        grid-row: 2 / 3;
+    }
+    
+    .trend-container {
+        grid-column: 1 / 1;
+        grid-row: 3 / 4;
     }
 }
