--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     height: 1.8em;
     flex: 1;
 }
+
 .search-bar:focus {
     outline: 2px solid grey;
 }
@@ -253,12 +254,31 @@ body {
         grid-template-rows: 166px 5fr;
     }
 
+    .header {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        padding: 0px 20px 0px 20px;
+    }
+    
+    .greeting {
+        display: none;
+    }
+    
+    .head-buttons {
+        grid-column: 1 / 3;
+        justify-self: center;
+        display: flex;
+        justify-content: space-between;
+        gap: 60px;
+    }
+
     .sidebar-logo > div, .nav-item > div {
         display: none;
     }
     
     .sidebar-logo {
-        padding: 0px 10px 0px 10px;
+        padding: 10px 10px 0px 10px;
     }
 
     .primary-nav, .secondary-nav {
@@ -283,5 +303,11 @@ body {
     .trend-container {
         grid-column: 1 / 1;
         grid-row: 3 / 4;
+    }
+}
+
+@media only screen and (max-width: 620px) {
+    .user-info > div {
+        display: none;
     }
 }
